tests/NormalTests/paczka1/fuzzy1/77450544.err
Error in line 4: p8VMxZ1J5br S884 45,8
Error in line 7: p8VMxZ1J5br A309 22,6
Error in line 25: bPQVriYGh A309 58,5
Error in line 30: cOsyT3 S884 26,5
Error in line 31: bPQVriYGh A78 61,3
